daily_mission/20.11.16/class.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  background-color: #fff;
  color: #555; /*웹페이지 전체 font 컬러*/
  font-weight: 100;
  font-family: "Noto Sans KR", sans-serif;
  text-rendering: optimizeLegibility;
}

header {
  background-color: #feca57;
  color: #636e72;
  padding: 3rem;
}

h1 {
  font-size: 40px;
  font-weight: 100;
}

h2 {
  font-weight: 100;
  font-size: 30px;
}

h2::after {
  display: block;
  height: 1px;
  background-color: #e58e26;
  content: " ";
  width: 220px;
  margin: 0 auto; /* 센터링하기 */
  margin-top: 10px; /* h2랑 line 사이의 간격 */
  margin-bottom: 20px;
}

.button:link,
.button:visited {
  display: inline-block;
  float: left;
  text-decoration: none;
  padding: 0.5rem 30px;
  margin-top: 0.5rem;
  margin-left: 1rem;
  background-color: #fff;
  color: #636e72;
  border: 1.5px solid #feca57;
  border-radius: 7px;
  transition: background-color 0.2s, border 0.2s, color 0.2s;
}

.button:hover,
.button:active {
  background-color: #feca57;
  border: 1.5px solid #feca57;
  color: #636e72;
}

#fill_out {
  margin-top: 3rem;
}

#my_form {
  width: 900px;
  margin: auto; /* 위아래가 0px, 좌우는 auto */
  text-align: center;
  padding: 1rem;
}

input {
  display: inline-block;
  float: left;
  width: 50%;
  margin: 0.6rem 1rem;
  padding: 0.7rem;
  border: 1px solid rgb(163, 160, 160);
  border-radius: 5px;
}

input[type="date"] {
  display: inline-block;
  width: 12rem;
  height: 2.5rem;
  cursor: pointer;
  float: left;
}

input[type="checkbox"] {
  display: inline-block;
  width: 2rem;
  height: 2rem;
  border: 1px solid #bcbcbc;
  cursor: pointer;
  float: left;
  margin-left: 10rem;
}

input[type="checkbox"]:checked {
  opacity: 1;
}

input[type="checkbox"]:checked + span {
  opacity: 0.8;
  text-decoration: line-through;
}

#list_out {
  width: 1420px;
  margin: 3rem auto;
  padding: 2rem;
}

.item_container {
  text-align: center;
  font-size: 22px;
}

li {
  list-style: none;
  height: 4rem;
  margin-top: 0.5rem;
}

.new_item {
  display: inline;
  width: 15rem;
  height: 1.5rem;
}

button {
  width: 3rem;
  height: 3rem;
  margin-right: 13rem;
  border: none;
  background-color: #fff;
  float: right;
}

ion-icon {
  font-size: 30px;
  margin: 0;
  color: #e58e26;
}

